[package]
name = "practice_034b_mip_cutting_planes"
version = "0.1.0"
edition = "2021"

[dependencies]
good_lp = { version = "1.10", features = ["highs"] }
ordered-float = "4"

[[bin]]
name = "phase1_gomory"
path = "src/gomory.rs"

[[bin]]
name = "phase2_covers"
path = "src/covers.rs"

[[bin]]
name = "phase3_cutting_plane"
path = "src/cutting_plane.rs"

[[bin]]
name = "phase4_branch_cut"
path = "src/branch_cut.rs"
