[package]
name = "practice_037_constraint_programming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phase1_domains"
path = "src/domains.rs"

[[bin]]
name = "phase2_ac3"
path = "src/ac3.rs"

[[bin]]
name = "phase3_backtracking"
path = "src/backtracking.rs"

[[bin]]
name = "phase4_applications"
path = "src/applications.rs"
